# DeepLearningDevelopment

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_full.txt  setup.py
src/CrimsonDeepLearning/activation/: general_activations.py
src/CrimsonDeepLearning/autoencoder/: vaeencoder.py
src/CrimsonDeepLearning/cnns/blocks/: coder_builders.py  commonblocks.py  downsampleblocks.py  embeddingblocks.py  sizepreservingblocks.py  upsampleblocks.py
src/CrimsonDeepLearning/cnns/layers/: grad_layers.py
src/CrimsonDeepLearning/cnns/models/: image_to_images.py
src/CrimsonDeepLearning/encapsulors/: encapsulors.py
src/CrimsonDeepLearning/gans/blocks/: domainblocks.py  mappingblock.py  styleblocks.py
src/CrimsonDeepLearning/gans/functional_layers/: modulations.py
src/CrimsonDeepLearning/gans/layers/: equalized_layers.py  modulations.py  normalarizations.py  samplelayers.py
src/CrimsonDeepLearning/gans/models/: __init__.py  critic.py  dcgan_discriminator.py  dcgan_generator.py  (+6 more)
src/CrimsonDeepLearning/utils/: data.py  earlystops.py  initializations.py  losses.py  metrics.py  randomness.py
src/CrimsonDeepLearning/visualization/: loggers.py  plot_features.py  plot_general.py  plot_grads.py  plots.py
src/IdeaNotes/gans/: infogan.ipynb
src/global_optimum/shakers/: Instruction.ipynb  ParamsShaker.py  z_ParamsShaker.ipynb
src/models/transformers/: BothDTypeTransformer.py  Instruction.ipynb
src/optimizers/dynamic_optimizers/: DynamicOptimizer.py  Instruction.ipynb
src/optimizers/noize_optimizers/: Instruction.ipynb  NoiseOptimizer.py
(+40 files in other folders)
