[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepLearningDevelopment"
version = "0.1.0"
description = "Personal DeepLearning Module"
authors = [{name = "Sisung Kim"}]
license = "MIT"

[project.dependencies]
asttokens>=2.0.0,<3.0.0
colorama>=0.4.0,<1.0.0
matplotlib>=3.0.0,<4.0.0
numpy>=1.18.0,<2.0.0
pandas>=1.0.0,<2.0.0
seaborn>=0.10.0,<1.0.0
torch>=2.0.0,<3.0.0
